--- a/src/components/browser/Header/style.css
+++ b/src/components/browser/Header/style.css
@@ -119,37 +119,33 @@ text {
     left: 20.6rem;
     right: 6.6rem;
 }
-.toolbar button {
-    border: 0;
-}
+/*.toolbar button {*/
+/*    box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.1);*/
+/*}*/
 
-.tool {
+/*.tool {*/
+/*    height: 2.6rem;*/
+
+/*    border-radius: 1.3rem;*/
+/*    background: #FFFFFF;*/
+
+/*    box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.1);*/
+/*}*/
+/*.tool:hover {background: #f6f7fa;}*/
+/*.tool:active {background: #f3f3f4;}*/
+
+/*.search {*/
+/*    flex-grow: 1;*/
+/*    max-width: 22rem;*/
+/*}*/
+
+.toolbar button.refresh {
     height: 2.6rem;
-
+    width: 2.6rem;
+    flex-shrink: 0;
     border-radius: 1.3rem;
     background: #FFFFFF;
-
     box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.1);
-}
-.tool:hover {background: #f6f7fa;}
-.tool:active {background: #f3f3f4;}
-
-.search {
-    flex-grow: 1;
-    max-width: 22rem;
-}
-.country-filter {
-    width: 4rem;
-}
-.public-filter {
-    width: 4rem;
-}
-.session-filter {
-    width: 4rem;
-}
-
-.refresh {
-    width: 2.6rem;
     display: flex;
     align-items: center;
     justify-content: center;
