--- a/src/components/browser/Filter/style.css
+++ b/src/components/browser/Filter/style.css
@@ -5,7 +5,7 @@
 .toolbar .filter-menu {
     box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.1);
 }
-.toolbar input, .toolbar button {
+.toolbar .search, .toolbar button {
     height: 2.6rem;
     /*border-radius: 1.3rem;*/
     background: #FFFFFF;
@@ -14,11 +14,15 @@
     overflow: hidden;
     transition: width ease .15s;
 }
-.toolbar input:hover,
+.toolbar .search:hover,
 .toolbar button:hover {background: #fafafe;}
+.toolbar .search:active,
+.toolbar button:active {background: #f6f6fa;}
+
+.toolbar input,
+.toolbar input:hover,
 .toolbar input:active,
-.toolbar button:active {background: #f3f3f4;}
-.toolbar input:focus {background: #FFFFFF;}
+.toolbar input:focus {background: none;}
 
 .toolbar button.filter-button {
     border-radius: 0;
@@ -33,20 +37,36 @@
     display: flex;
 }
 
-.toolbar input {
-    width: 2.6rem;
-    flex-grow: 1;
-    flex-shrink: 0;
-    max-width: 18rem;
-    transition: max-width ease .15s;
-}
-.toolbar input.active {
-    max-width: 22rem;
-    /*max-width: 90%;*/
-}
 
 .filter-menu svg {
     height: 1.5rem;
     width: 2.5rem;
     vertical-align: middle;
+}
+
+.toolbar .search {
+    width: 2.6rem;
+    border-radius: 1.3rem;
+    padding-inline: 0.7rem;
+    gap: 0.5rem;
+    flex-grow: 1;
+    flex-shrink: 0;
+    max-width: 18rem;
+    transition: max-width ease .15s;
+    display: flex;
+    align-items: center;
+}
+.toolbar .search.active {
+    max-width: 22rem;
+    /*max-width: 90%;*/
+}
+.toolbar .search input {
+    width: 0;
+    flex-grow: 1;
+    height: 2.6rem;
+}
+
+.toolbar .search svg {
+    height: 1.6rem;
+    width: 1.6rem;
 }
