--- a/src/components/browser/Sidebar/style.css
+++ b/src/components/browser/Sidebar/style.css
@@ -5,6 +5,12 @@
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.4);
+    transition: opacity .2s ease-out;
+}
+.open .overlay {opacity: 1}
+.closed .overlay {
+    opacity: 0;
+    pointer-events: none;
 }
 
 .sidebar {
