--- a/src/components/browser/Sidebar/MenuSidebar.css
+++ b/src/components/browser/Sidebar/MenuSidebar.css
@@ -13,3 +13,14 @@
 .closed .menu.sidebar {
     left: -35rem
 }
+
+
+.menu.sidebar .header {
+    display: flex;
+    flex-direction: row;
+    height: 4.8rem;
+    padding: 0.5rem;
+}
+.menu.sidebar .header > svg {
+
+}
