--- a/src/components/browser/Sidebar/MenuSidebar.css
+++ b/src/components/browser/Sidebar/MenuSidebar.css
@@ -15,12 +15,12 @@
 }
 
 
-.menu.sidebar .header {
+.menu.sidebar .header-container {
     display: flex;
     flex-direction: row;
     height: 4.8rem;
     padding: 0.5rem;
 }
-.menu.sidebar .header > svg {
+.menu.sidebar .header-container > svg {
 
 }
