--- a/src/components/browser/Sidebar/style.css
+++ b/src/components/browser/Sidebar/style.css
@@ -1,4 +1,12 @@
-.overlay {
+.sidebar-wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    transition: opacity .2s ease;
+}
+
+.sidebar-wrap .overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -7,13 +15,13 @@
     background: rgba(0, 0, 0, 0.4);
     transition: opacity .2s ease-out;
 }
-.open .overlay {opacity: 1}
-.closed .overlay {
+.sidebar-wrap .open .overlay {opacity: 1}
+.sidebar-wrap .closed .overlay {
     opacity: 0;
     pointer-events: none;
 }
 
-.sidebar {
+.sidebar-wrap .sidebar {
     position: fixed;
     top: 0;
 
@@ -25,10 +33,3 @@
     gap: 0.5rem;
 }
 
-.sidebar-wrap {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    transition: opacity .2s ease;
-}
