--- a/src/containers/mobile/Home.css
+++ b/src/containers/mobile/Home.css
@@ -9,7 +9,7 @@
     align-items: center;
     gap: 1rem;
 }
-#temp-mobile-page .title {
+#temp-mobile-page .Title {
     font-size: 1.2rem;
     font-weight: 500;
 }
