--- a/src/components/browser/Filter/style.css
+++ b/src/components/browser/Filter/style.css
@@ -2,10 +2,10 @@
 /*    display: flex;*/
 /*    gap: 1rem;*/
 /*}*/
-.toolbar .filter-menu {
+.Toolbar .filter-menu {
     box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.1);
 }
-.toolbar .search, .toolbar button {
+.Toolbar .search, .Toolbar button {
     height: 2.6rem;
     /*border-radius: 1.3rem;*/
     background: #FFFFFF;
@@ -14,17 +14,17 @@
     overflow: hidden;
     transition: width ease .15s;
 }
-.toolbar .search:hover,
-.toolbar button:hover {background: #fafafe;}
-.toolbar .search:active,
-.toolbar button:active {background: #f6f6fa;}
+.Toolbar .search:hover,
+.Toolbar button:hover {background: #fafafe;}
+.Toolbar .search:active,
+.Toolbar button:active {background: #f6f6fa;}
 
-.toolbar input,
-.toolbar input:hover,
-.toolbar input:active,
-.toolbar input:focus {background: none;}
+.Toolbar input,
+.Toolbar input:hover,
+.Toolbar input:active,
+.Toolbar input:focus {background: none;}
 
-.toolbar button.filter-button {
+.Toolbar button.filter-button {
     border-radius: 0;
     box-shadow: none;
     display: flex;
@@ -32,7 +32,7 @@
     justify-content: center;
 }
 
-.toolbar .filter-menu {
+.Toolbar .filter-menu {
     border-radius: 1.3rem;
     overflow: hidden;
     display: flex;
@@ -45,7 +45,7 @@
     /*vertical-align: middle;*/
 }
 
-.toolbar .search {
+.Toolbar .search {
     cursor: text;
     width: 2.6rem;
     border-radius: 1.3rem;
@@ -58,18 +58,18 @@
     display: flex;
     align-items: center;
 }
-.toolbar .search.active {
+.Toolbar .search.active {
     max-width: 22rem;
     /*max-width: 90%;*/
 }
-.toolbar .search input {
+.Toolbar .search input {
     width: 0;
     flex-grow: 1;
     height: 2.6rem;
     padding-left: 0.3rem;
 }
 
-.toolbar .search svg {
+.Toolbar .search svg {
     height: 1.6rem;
     width: 1.6rem;
 }
