--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ button {
     height: 2.3rem;
     border: 0;
     padding: 0;
+    margin: 0;
     border-radius: 1.15rem;
     font: inherit;
     background: #F0F0F0;
