--- a/src/index.scss
+++ b/src/index.scss
@@ -38,9 +38,6 @@
 body {
     margin: 0;
     padding: 0;
-    /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
-    /*  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
-    /*  sans-serif;*/
     font-family: "Noto Sans KR", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -67,19 +64,16 @@ button {
     font: inherit;
     background: #F0F0F0;
     outline: none;
-}
-
-button:hover {
-    background: #E0E0E0;
-}
-
-button:active {
-    background: #D0D0D0;
-}
-
-button > span {
-    display: inline-block;
-    height: 1.5rem;
+    &:hover {
+        background: #E0E0E0;
+    }
+    &:active {
+        background: #D0D0D0;
+    }
+    > span {
+        display: inline-block;
+        height: 1.5rem;
+    }
 }
 
 input[type="text"] {
@@ -89,8 +83,8 @@ input[type="text"] {
     height: 2.3rem;
     border-radius: 1.15rem;
     font-size: 0.9rem;
-}
-input[type="text"]:focus {
-    outline: none;
-    background: #e7e7e7;
+    &:focus {
+        outline: none;
+        background: #e7e7e7;
+    }
 }
