chore : change install link

--- a/src/containers/browser/Join.scss
+++ b/src/containers/browser/Join.scss
@@ -77,7 +77,7 @@
         .install {
             font-size: 0.9rem;
             color: #BABBBF;
-            .link {
+            a {
                 color: #BABBBF;
             }
         }
