--- a/src/components/browser/Modal/PasswordModal.scss
+++ b/src/components/browser/Modal/PasswordModal.scss
@@ -1,42 +1,63 @@
 .password.modal {
+  width: 22rem;
+
+  .title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+
+    svg {
+      margin-top: 0.2rem;
+    }
+
+    span {
+      font-size: 1.3rem;
+      font-weight: 400;
+      width: 20rem;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+  }
+
+  input {
+    box-sizing: border-box;
     width: 22rem;
-    .title {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 0.5rem;
-        svg {
-            margin-top: 0.2rem;
-        }
-        span {
-            font-size: 1.3rem;
-            font-weight: 400;
-            width: 20rem;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-        }
+    padding-inline: 1rem;
+
+    &::placeholder {
+      color: #AAAAAA
     }
-    input {
-        box-sizing: border-box;
-        width: 22rem;
-        padding-inline: 1rem;
-        &::placeholder {color: #AAAAAA}
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.9rem;
+  }
+
+  button {
+    &.join {
+      color: #FFFFFF;
+      width: 7rem;
+      background: #191919;
+
+      &:hover {
+        background: #454545;
+      }
+
+      &:active {
+        background: #363636;
+      }
+
+      &:disabled {
+        background: #A7A7A7
+      }
     }
-    .buttons {
-        display: flex;
-        justify-content: space-between;
-        font-size: 0.9rem;
+
+    &.abort {
+      width: 4.5rem
     }
-    button{
-        &.join {
-            color: #FFFFFF;
-            width: 7rem;
-            background: #191919;
-            &:hover {background: #454545;}
-            &:active {background: #363636;}
-            &:disabled {background: #A7A7A7}
-        }
-        &.abort {width: 4.5rem}
-    }
+  }
 }
