fix : fix return svg icon

--- a/src/containers/browser/Join.scss
+++ b/src/containers/browser/Join.scss
@@ -25,6 +25,11 @@
     &:active {
       background: #c4c7ce;
     }
+    svg {
+      width: 0.9rem;
+      margin-right: 0.3rem;
+      padding-top: 0.08rem;
+    }
   }
 
   .body {
