feat : manage mode styling

--- a/src/components/browser/UserList/style.scss
+++ b/src/components/browser/UserList/style.scss
@@ -150,6 +150,13 @@
         }
       }
     }
+
+    .User {
+      background: #E5E6EA;
+      &:hover {
+        background: #dee1e7;
+      }
+    }
   }
 
   &.add {
