feat : seperate logic with add mode

--- a/src/components/browser/UserList/style.scss
+++ b/src/components/browser/UserList/style.scss
@@ -181,7 +181,7 @@
       .User {
         background: #E5E6EA;
         &:hover {
-          background: #dee1e7;
+          background: #E5E6EA;
         }
       }
     }
