--- a/src/components/browser/UserList/style.scss
+++ b/src/components/browser/UserList/style.scss
@@ -141,6 +141,19 @@
         }
         &:hover {
           background: #CECFD8;
+          svg.arrow {
+            opacity: 1;
+            right: 1.5rem;
+          }
+        }
+        svg.arrow {
+          position: absolute;
+          right: 3rem;
+          height: 1.8rem;
+          width: 1.8rem;
+          fill: #9D9EA4;
+          opacity: 0;
+          transition: opacity .1s ease-out, right .1s ease-out;
         }
       }
 
